# bbs-search-crawler

./: Cargo.toml  README.md
.sqlx/: query-af5a7fca8d423295b5fcb952f29a219530cf00369cf246f1a4952fb0491b5dd9.json  query-bae6428deb5bca8b3cb146ad080971d15476317dbdb1a266a4dcc0bbbe69081b.json  query-f4c0555f7397f41d1b23b0671088002a7b157a88f51291dcf25939379df4f927.json
migrations/: 20241023151456_start.sql
src/: board.rs  lib.rs  main.rs  res.rs  sql_client.rs  test.html
